Show delete confirmation dialog
Introduce a new delete confirmation dialog to preserve old behavior
that asked for confirmation before deleting or moving files to trash.

This is needed since including Glimpse as preinstalled package and
requesting the MANAGE_MEDIA permission, Android skips showing a
confirmation dialog.

Also, default to permanently deleting files similar to Gallery2 while
allowing users to skip it easily using a checkbox in the dialog.

Change-Id: Ib474497e31713bfaf3823b4867313ff7c7e7e4c3
Signed-off-by: Aayush Gupta <aayushgupta219@gmail.com>

--- a/app/src/main/res/menu/album_action_bar.xml
+++ b/app/src/main/res/menu/album_action_bar.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
      SPDX-FileCopyrightText: 2023 The LineageOS Project
+     SPDX-FileCopyrightText: 2024 The Calyx Institute
      SPDX-License-Identifier: Apache-2.0
 -->
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
@@ -16,10 +17,18 @@
 
     <item
         style="@style/Theme.Glimpse.TopAppBarOption"
+        android:id="@+id/delete"
+        android:icon="@drawable/ic_delete"
+        android:title="@string/file_action_delete"
+        android:contentDescription="@string/file_action_delete"
+        app:showAsAction="ifRoom" />
+
+    <item
+        style="@style/Theme.Glimpse.TopAppBarOption"
         android:id="@+id/moveToTrash"
         android:icon="@drawable/ic_delete"
         android:title="@string/file_action_move_to_trash"
-        android:contentDescription="@string/file_action_move_to_trash"
-        app:showAsAction="ifRoom" />
+        android:visible="false"
+        app:showAsAction="never" />
 
 </menu>
