--- a/app/src/main/res/layout/activity_view.xml
+++ b/app/src/main/res/layout/activity_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
      SPDX-FileCopyrightText: 2023-2024 The LineageOS Project
+     SPDX-FileCopyrightText: 2024 The Calyx Institute
      SPDX-License-Identifier: Apache-2.0
 -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -76,7 +77,7 @@
             style="@style/Theme.Glimpse.MediaViewer.BottomSheet.Button"
             android:contentDescription="@string/file_action_move_to_trash"
             android:drawableTop="@drawable/ic_delete"
-            android:text="@string/file_action_move_to_trash" />
+            android:text="@string/file_action_delete" />
 
         <!-- Cannot mess with fixed padding from here because of insets -->
         <Space
