DO NOT MERGE: Show warning regarding trash's auto-empty behavior
Change-Id: Ie1c49d1adb3119e8fe847744b8225299baab6aaf
Signed-off-by: Aayush Gupta <aayushgupta219@gmail.com>

--- a/app/src/main/res/layout/no_media_linear_layout.xml
+++ b/app/src/main/res/layout/no_media_linear_layout.xml
@@ -24,4 +24,14 @@
         android:text="@string/no_media"
         android:textAppearance="?attr/textAppearanceBodyLarge" />
 
+    <TextView
+        android:id="@+id/warningTrashTimePeriod"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="80dp"
+        android:layout_marginVertical="10dp"
+        android:text="@string/warning_trash_time_period"
+        android:textAlignment="center"
+        android:textAppearance="?attr/textAppearanceBodyMedium"
+        android:visibility="gone" />
 </LinearLayout>
