Show warning regarding trash's auto-empty behavior
Change-Id: Ie1c49d1adb3119e8fe847744b8225299baab6aaf
Signed-off-by: Aayush Gupta <aayushgupta219@gmail.com>

--- a/app/src/main/res/values/calyx_strings.xml
+++ b/app/src/main/res/values/calyx_strings.xml
@@ -20,4 +20,7 @@
 
     <!-- File actions -->
     <string name="file_action_delete">Delete</string>
+
+    <!-- Warnings and information -->
+    <string name="warning_trash_time_period">Files will be permanently deleted from trash after 30 days from the date of deletion.</string>
 </resources>
